# SSHack

./: Cargo.toml  README.md  config.toml  database.md  demo.tape  flags.toml  install.sh
src/: app.rs  cli.rs  conf.rs  database.rs  main.rs  server.rs  theme.rs  users.rs
src/screens/: about.rs  browse.rs  flags.rs  home.rs  leaderboard.rs  login.rs  mod.rs  register.rs  screen.rs
