[package]
name = "sctf"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bcrypt = "0.19.0"
clap = { version = "4.5.60", features = ["derive"] }
ratatui = "0.30.0"
ratatui-base16 = "0.3.7"
rusqlite = "0.38.0"
russh = "0.57.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
terminput = "0.5.12"
terminput-crossterm = "0.4.8"
tokio = "1.50.0"
